--- a/views/index.erb
+++ b/views/index.erb
@@ -1,16 +1,16 @@
-<!DOCTYPE html 
-     PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html
+        PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
   <link rel="stylesheet" type="text/css" href="stylesheets/reset.css"/>
-  <link rel="stylesheet" type="text/css" href="stylesheets/prettify.css"/>  
-  
+  <link rel="stylesheet" type="text/css" href="stylesheets/prettify.css"/>
+
   <script type="text/javascript" src="javascripts/prettify.js"></script>
   <script type="text/javascript" src="javascripts/jquery-1.3.2.js"></script>
 
-  <style type="text/css">    
+  <style type="text/css">
 
     #page {
       padding: 13px;
@@ -24,36 +24,39 @@
   </style>
 </head>
 <body>
-  <div id="page">
-    <textarea id="script">
-    </textarea>
-    <button>Eval</button>
+<div id="page">
+  <textarea id="script"></textarea>
+  <button>Eval</button>
 
-    <div id="result">
+  <div id="result">
 
-    </div>
   </div>
-  
-  <script type="text/javascript">
-    $(function () {
-      var button = '#page button'
-      var script = '#script'
-      var result = '#result'
+</div>
 
-      $(button).click(function() {
-        $.ajax({
-          url: 'eval',
-          success: function(data) {
-            $(result).html('<pre class="prettyprint lang-js">' + data + '</pre>')
-            prettyPrint()
-          },
-          error: function(xhr, textStatus, errorThrown) {
-            alert('error processing script s: ' + textStatus + ", err: " + errorThrown)
-          }
-        })
+<script type="text/javascript">
+  $(function () {
+    var button = '#page button'
+    var script = '#script'
+    var result = '#result'
+
+    $(button).click(function() {
+      $.ajax({
+        url: 'eval',
+        type: 'POST',
+        data: {
+          source: $(script).val()
+        },
+        success: function(data) {
+          $(result).html('<pre class="prettyprint lang-js">' + data + '</pre>')
+          prettyPrint()
+        },
+        error: function(xhr, textStatus, errorThrown) {
+          alert('error processing script s: ' + textStatus + ", err: " + errorThrown)
+        }
       })
-
     })
-  </script>
+
+  })
+</script>
 </body>
 </html>
